# fatigue-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.serving  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.ml  ci.yml
schemas/: epoch_features.schema.json  session_features.schema.json
src/eeg/: __init__.py  cli.py  pipeline.py
src/eeg/data/: artifacts.py  epoch.py  filters.py  io.py  validation.py
src/eeg/features/: _fast_spectral.py  coherence_features.py  connectivity.py  entropy_features.py  extract_features.py  microstates.py  nonlinear_features.py  pac.py  phase_connectivity.py  psd_features.py  sidecars.py  source_recon.py  spectrograms.py  tf_patches.py  timefreq_features.py
src/eeg/io/: storage.py
src/eeg/models/: __init__.py  autoencoder.py  cli.py  embeddings.py  eval.py  export.py  ssl_dataset.py  ssl_tf.py  unsupervised.py
src/eeg/preprocessing/: artifact_removal.py  epoching.py  filters.py  normalization.py
src/eeg/scripts/: extract_features.py  process_sessions.py  train_ssl.py  train_ssl_tf.py
src/eeg/serving/: app.py
src/eeg/utils/: config_loader.py  experiment.py  logger.py  montage.py  paths.py
tests/: __init__.py  conftest.py  test_data_schema.py  test_eval.py  test_features.py  test_gnn_dataset.py  test_mlflow_integration.py  test_modelling.py  test_models_cli.py  test_pac.py  test_phase_connectivity.py  test_pipeline.py  test_pipeline_flat_channel.py  test_preprocessing.py  test_process_sessions_sfreq.py  test_serving.py  test_spectrograms.py  test_ssl_model_pl.py  test_ssl_training.py  test_tf_patches.py  test_train_ssl_integration.py
