[tool.poetry]
name = "fatigue-ssl"
version = "0.1.0"
description = "Machine learning pipeline for fatigue detection"
authors = ["Anikait Lakhotia alokhoti@uwaterloo.ca"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.1"
scikit-learn = "^1.4"
matplotlib = "^3.8"
seaborn = "^0.13"
torch = "^2.2"
torchaudio = "^2.2"
pytorch-lightning = "^2.2"
hydra-core = "^1.3"
mne = "^1.6"
mlflow = "^2.12"
wandb = "^0.17"
umap-learn = "^0.5"
tqdm = "^4.66"
great-expectations = "^0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
black = "^24.3"
isort = "^5.13"
ruff = "^0.3"
mypy = "^1.9"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
